--- a/converter.html
+++ b/converter.html
@@ -109,8 +109,8 @@
 				</div>
 			</div>
 
-			<div id="lastWarnings" class="code"></div>
-			<div id="lastError" class="code"></div>
+			<div class="code mt-2 p-2 ve-flex-col ve-hidden conv__disp-message conv__disp-message--warning" id="lastWarnings"></div>
+			<div class="code mt-2 p-2 ve-flex-col ve-hidden conv__disp-message conv__disp-message--error" id="lastError"></div>
 		</div>
 	</div>
 </div>
