--- a/bestiary.html
+++ b/bestiary.html
@@ -138,13 +138,19 @@
 					</table>
 				</div>
 
-				<div class="ve-flex-vh-center mt-2 no-print best-ecgen__hidden">
-					<button type="button" class="btn btn-success btn-xs mr-2" id="btn-encounterbuild">Encounter Builder</button>
-					<div id="wrp-profbonusdice" class="ve-flex-v-center mr-2">
-						<button type="button" class="btn btn-default btn-xs" id="profbonusdice" title="See the Dungeon Master&apos;s Guide, p263.">Use Proficiency Dice</button>
+				<div class="ve-flex-vh-center mt-2 no-print mobile__ve-flex-col best-ecgen__hidden">
+					<div class="ve-flex-v-center mr-2 mobile__mb-2 mobile__mr-0">
+						<button type="button" class="btn btn-success btn-xs mr-2" id="btn-encounterbuild">Encounter Builder</button>
+						<div id="wrp-profbonusdice" class="ve-flex-v-center">
+							<button type="button" class="btn btn-default btn-xs" id="profbonusdice" title="See the Dungeon Master&apos;s Guide, p263.">Use Proficiency Dice</button>
+						</div>
 					</div>
-					<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Printer View</button>
-					<button type="button" class="btn btn-default btn-xs mr-2" id="btn-show-table" title="View and Download Creatures in Tabular Format">Table View</button>
+
+					<div class="ve-flex-v-center mr-2 mobile__mb-2 mobile__mr-0">
+						<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Printer View</button>
+						<button type="button" class="btn btn-default btn-xs" id="btn-show-table" title="View and Download Creatures in Tabular Format">Table View</button>
+					</div>
+
 					<div class="ve-flex-v-center btn-group" id="btngroup-manager">
 						<button type="button" class="btn btn-xs btn-primary" name="manage-content">Manage Content</button>
 						<button type="button" class="btn btn-xs btn-primary" name="manage-prerelease" title="Manage Prerelease Content"><span class="glyphicon glyphicon-wrench"></span></button>
