--- a/spells.html
+++ b/spells.html
@@ -130,15 +130,21 @@
 					</table>
 				</div>
 
-				<div class="ve-flex-vh-center mt-2 no-print">
-					<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Book View</button>
-					<button type="button" class="btn btn-default btn-xs mr-2" id="btn-show-table" title="View and Download Spells in Tabular Format">Table View</button>
-					<div class="ve-flex-v-center btn-group" id="btngroup-manager">
-						<button type="button" class="btn btn-xs btn-primary" name="manage-content">Manage Content</button>
-						<button type="button" class="btn btn-xs btn-primary" name="manage-prerelease" title="Manage Prerelease Content"><span class="glyphicon glyphicon-wrench"></span></button>
-						<button type="button" class="btn btn-xs btn-info" name="manage-brew" title="Manage Homebrew"><span class="glyphicon glyphicon-glass"></span></button>
+				<div class="ve-flex-vh-center mt-2 no-print mobile__ve-flex-col">
+					<div class="ve-flex-v-center mr-2 mobile__mb-2 mobile__mr-0">
+						<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Book View</button>
+						<button type="button" class="btn btn-default btn-xs" id="btn-show-table" title="View and Download Spells in Tabular Format">Table View</button>
 					</div>
-					<button type="button" class="btn btn-default btn-xs ml-2" id="btn-list-settings" title="Settings"><span class="glyphicon glyphicon-cog"></span></button>
+
+					<div class="ve-flex-v-center mobile__mb-2">
+						<div class="ve-flex-v-center btn-group" id="btngroup-manager">
+							<button type="button" class="btn btn-xs btn-primary" name="manage-content">Manage Content</button>
+							<button type="button" class="btn btn-xs btn-primary" name="manage-prerelease" title="Manage Prerelease Content"><span class="glyphicon glyphicon-wrench"></span></button>
+							<button type="button" class="btn btn-xs btn-info" name="manage-brew" title="Manage Homebrew"><span class="glyphicon glyphicon-glass"></span></button>
+						</div>
+
+						<button type="button" class="btn btn-default btn-xs ml-2" id="btn-list-settings" title="Settings"><span class="glyphicon glyphicon-cog"></span></button>
+					</div>
 				</div>
 			</div>
 		</div>
